hphp/hack/test/typecheck/private_bad1.php.exp
File "private_bad1.php", line 12, characters 9-12:
You cannot access this method (Typing[4112])
  File "private_bad1.php", line 4, characters 20-23:
  This method is private
